create user interface

--- a/AssemblyBrowser/View/MainWindow.xaml
+++ b/AssemblyBrowser/View/MainWindow.xaml
@@ -7,4 +7,38 @@
         xmlns:conv="clr-namespace:AssemblyBrowser.Converters"
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="300">
+    <Window.Resources>
+        <conv:MethodExtensionConverter x:Key="methodExtensionConverter"  />
+    </Window.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.1*" />
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <DockPanel Grid.Row="0" LastChildFill="True">
+            <Button DockPanel.Dock="Bottom" Content="Загрузить" Height="30" Width="100" Command="{Binding LoadAssemblyCommand}"/>
+        </DockPanel>
+        <TreeView Grid.Row="1" ItemsSource="{Binding Assembly.Nodes}">
+            <TreeView.ItemTemplate>
+                <HierarchicalDataTemplate ItemsSource="{Binding Childrens}">
+                    <HierarchicalDataTemplate.ItemContainerStyle>
+                        <Style TargetType="TreeViewItem">
+                            <Style.Triggers>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding NodeType}" Value="Method" />
+                                        <Condition Binding="{Binding ObjectType, Converter={StaticResource methodExtensionConverter}}" Value="True" />
+                                    </MultiDataTrigger.Conditions>
+                                    <MultiDataTrigger.Setters>
+                                        <Setter Property="Foreground" Value="Red" />
+                                    </MultiDataTrigger.Setters>
+                                </MultiDataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </HierarchicalDataTemplate.ItemContainerStyle>
+                    <TextBlock Text="{Binding Name}" />
+                </HierarchicalDataTemplate>
+            </TreeView.ItemTemplate>
+        </TreeView>
+    </Grid>
 </Window>
